force-app/main/default/objects/Contact/fields/Contact_Person_for_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_for_Delivery__c</fullName>
    <label>Contact Person for Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>