force-app/main/default/objects/Contact/fields/Contact_Preference_Language__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preference_Language__c</fullName>
    <label>Contact Preference Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Malyalam</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>