force-app/main/default/objects/Contact/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kozhikode</fullName>
            </value>
            <value>
                <fullName>Alappuzha</fullName>
            </value>
            <value>
                <fullName>Ernakulam</fullName>
            </value>
            <value>
                <fullName>Idukki</fullName>
            </value>
            <value>
                <fullName>Kannur</fullName>
            </value>
            <value>
                <fullName>Kasaragod</fullName>
            </value>
            <value>
                <fullName>Kollam</fullName>
            </value>
            <value>
                <fullName>Kottayam</fullName>
            </value>
            <value>
                <fullName>Malappuram</fullName>
            </value>
            <value>
                <fullName>Palakkad</fullName>
            </value>
            <value>
                <fullName>Pathanamthitta</fullName>
            </value>
            <value>
                <fullName>Thiruvananthapuram</fullName>
            </value>
            <value>
                <fullName>Thrissur</fullName>
            </value>
            <value>
                <fullName>Wayanad</fullName>
            </value>
            <value>
                <fullName>Bagalkot</fullName>
            </value>
            <value>
                <fullName>Ballari</fullName>
            </value>
            <value>
                <fullName>Belagavi</fullName>
            </value>
            <value>
                <fullName>Bengaluru Rural</fullName>
            </value>
            <value>
                <fullName>Bengaluru Urban</fullName>
            </value>
            <value>
                <fullName>Bidar</fullName>
            </value>
            <value>
                <fullName>Chamarajanagar</fullName>
            </value>
            <value>
                <fullName>Chikballapur</fullName>
            </value>
            <value>
                <fullName>Chikkamagaluru</fullName>
            </value>
            <value>
                <fullName>Chitradurga</fullName>
            </value>
            <value>
                <fullName>Dakshina Kannada</fullName>
            </value>
            <value>
                <fullName>Davanagere</fullName>
            </value>
            <value>
                <fullName>Dharwad</fullName>
            </value>
            <value>
                <fullName>Gadag</fullName>
            </value>
            <value>
                <fullName>Hassan</fullName>
            </value>
            <value>
                <fullName>Haveri</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>