force-app/main/default/objects/Contact/fields/Relationship_Level__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Level__c</fullName>
    <label>Relationship Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Support Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>