force-app/main/default/objects/Contact/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Phone)),
    NOT(
        REGEX(
            Phone,
            &quot;^[0-9]{10,15}$&quot;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Enter a valid phone number (digits only).</errorMessage>
</ValidationRule>